@@ -1,0 +1,32 @@
+<?php
+/**
+ * Settings Language file for Ace
+ *
+ * @package ace
+ * @subpackage lexicon
+ */
+
+$_lang['area_general'] = 'Allgemeine Einstellungen';
+
+$_lang['setting_ace.theme'] = 'Editor Thema';
+$_lang['setting_ace.theme_desc'] = 'Verf&uuml;gbare Themen: ambiance, chaos, chrome, clouds, clouds_midnight, cobalt, crimson_editor, dawn, dreamweaver, eclipse, github, idle_fingers, katzenmilch, kr, kuroir, merbivore, merbivore_soft, mono_industrial, monokai, pastel_on_dark, solarized_dark, solarized_light, terminal, textmate, tomorrow, tomorrow_night, tomorrow_night_blue, tomorrow_night_bright, tomorrow_night_eighties, twilight, vibrant_ink, xcode.';
+$_lang['setting_ace.word_wrap'] = 'Zeilenumbruch';
+$_lang['setting_ace.word_wrap_desc'] = 'Lange Zeilen umbrechen.';
+$_lang['setting_ace.font_size'] = 'Schriftgr&ouml;&szlig;e';
+$_lang['setting_ace.font_size_desc'] = 'Schriftgr&ouml;&szlig;e im Editor.';
+$_lang['setting_ace.soft_tabs'] = 'Soft tabs';
+$_lang['setting_ace.soft_tabs_desc'] = 'Replace tabs by spaces.';
+$_lang['setting_ace.tab_size'] = 'Tab size';
+$_lang['setting_ace.tab_size_desc'] = 'Tab width to use.';
+$_lang['setting_ace.fold_widgets'] = 'Fold widgets';
+$_lang['setting_ace.fold_widgets_desc'] = 'Show fold widgets in the gutter.';
+$_lang['setting_ace.show_invisibles'] = 'Invisible characters';
+$_lang['setting_ace.show_invisibles_desc'] = 'Show whitespaces, tabs and line endings.';
+$_lang['setting_ace.snippets'] = 'Snippets';
+$_lang['setting_ace.snippets_desc'] = 'Code snippets expanded by “Tab”. Snippet example:<br /><br /><pre>\nsnippet getr\n	[!getResources? parents=`${1}`${2}]]\n</pre></br>You can insert “Tab” character by pressing Alt + 09';
+$_lang['setting_ace.height'] = 'Edit area height';
+$_lang['setting_ace.height_desc'] = 'Editor height in pixel unit. If left blank, a defaul height will be used.';
+$_lang['setting_ace.grow'] = 'Höhe an Text anpassen';
+$_lang['setting_ace.grow_desc'] = 'Die Höhe des Editors wird an den Text angepasst. Die minimale Höhe entspricht der Option ace.height. Mögliche Werte: Leer - Höhe passt nicht zum Text; Die Zahl ist größer als 0 - die Höhe wird an den Text angepasst, aber nicht mehr als der Wert; 0 - Höhe ist für Text angepasst, Höhe ist unbegrenzt.';
+$_lang['setting_ace.html_elements_mime'] = 'MIME-Typ für HTML-Elemente';
+$_lang['setting_ace.html_elements_mime_desc'] = 'Dieser Typ wird vom Editor für HTML-Elemente verwendet - Vorlagen, Chunks und Ressourcen mit HTML-Typ. Wenn nicht angegeben, wird der Standardtyp verwendet';
