@@ -1,0 +1,28 @@
+<?php
+/**
+ * Settings Language file for Ace
+ *
+ * @package ace
+ * @subpackage lexicon
+ */
+
+$_lang['area_general'] = 'Algemene instellingen';
+
+$_lang['setting_ace.theme'] = 'Editor thema';
+$_lang['setting_ace.theme_desc'] = 'Beschikbare thema\'s: chrome, clouds, clouds_midnight, cobalt, crimson_editor, dawn, dreamweaver, eclipse, github, idle_fingers, kr_theme, merbivore, merbivore_soft, mono_industrial, monokai, pastel_on_dark, solarized_dark, solarized_light, textmate, tomorrow, tomorrow_night, tomorrow_night_blue, tomorrow_night_bright, tomorrow_night_eighties, twilight, vibrant_ink.';
+$_lang['setting_ace.word_wrap'] = 'Woorden afbreken';
+$_lang['setting_ace.word_wrap_desc'] = 'Lange zinnen afbreken op woorden.';
+$_lang['setting_ace.font_size'] = 'Lettergrootte';
+$_lang['setting_ace.font_size_desc'] = 'De lettergrootte van de editor.';
+$_lang['setting_ace.autogrow'] = 'Automatisch groeien';
+$_lang['setting_ace.autogrow_desc'] = 'Laat de editor automatisch meegroeien tot een max van "autogrowmax" grootte.';
+$_lang['setting_ace.autogrowmax'] = 'Automatisch groeien max.';
+$_lang['setting_ace.autogrowmax_desc'] = 'De maximaal aantal lijnen waarna de editor stopt met groeien.';
+$_lang['setting_ace.snippets'] = 'Snippets';
+$_lang['setting_ace.snippets_desc'] = 'Code snippets you can expand by pressing “Tab” key. Snippet example:<br /><br /><pre>\nsnippet getr\n	[!getResources? parents=`${1}`${2}]]\n</pre></br>You can insert “Tab” character by pressing Alt + 09';
+$_lang['setting_ace.height'] = 'Edit area height';
+$_lang['setting_ace.height_desc'] = 'Editor height in pixel unit. If left blank, a defaul height will be used.';
+$_lang['setting_ace.grow'] = 'Pas hoogte aan tekst aan';
+$_lang['setting_ace.grow_desc'] = 'De hoogte van de editor wordt aangepast aan de tekst. De minimale hoogte is gelijk aan de optie aashoogte. Mogelijke waarden: leeg - hoogte past niet in de tekst; Het aantal is groter dan 0 - de hoogte is aangepast aan de tekst, maar niet hoger dan de waarde; 0 - hoogte is aangepast voor tekst, hoogte is onbeperkt. ';
+$_lang['setting_ace.html_elements_mime'] = 'MIME-type voor html-elementen';
+$_lang['setting_ace.html_elements_mime_desc'] = 'Dit type wordt door de editor gebruikt voor html-elementen - sjablonen, chunks en bronnen met html-type. Als dit niet wordt opgegeven, wordt het standaardtype gebruikt';
